--- a/src/styles/SignIn.css
+++ b/src/styles/SignIn.css
@@ -10,7 +10,6 @@
   box-sizing: border-box;
   border: none;
 }
-
 /* Mobile adjustments */
 @media (max-width: 768px) {
   .form-wrapper {
@@ -43,6 +42,7 @@
   padding: 30px; /* Increased padding for better spacing */
   background-color: #ffffff;
   border-radius: 8px;
+  box-shadow: none;
   /* border: 1px solid #c3c3c3; */
   box-sizing: border-box;
 }
@@ -137,6 +137,7 @@ input:focus {
   border-radius: 8px;
   color: #000;
   font-family: "Helvetica Neue", Arial, sans-serif;
+  box-shadow: none;
 }
 
 .social-stories-page h1,
