--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -10,7 +10,7 @@
   padding-bottom: 20px; /* Add padding at the bottom for better spacing */
   background-color: #ffffff; /* White background for the form */
   border-radius: 8px;
-  border: 1px solid #c3c3c3; /* Add the desired border */
+  /* border: 1px solid #c3c3c3; */
 }
 
 /* Mobile Adjustments */
@@ -49,6 +49,7 @@
   border-radius: 8px;
   border: 1px solid transparent; /* Initially transparent border */
   box-sizing: border-box;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 /* Labels: Style all label text */
