--- a/src/styles/Payment.css
+++ b/src/styles/Payment.css
@@ -1,11 +1,11 @@
 .payment-page {
   max-width: 1200px;
-  margin: 20px auto; /* Ensure the 20px margin around the entire perimeter */
+  margin: 20px auto;
   padding: 60px;
   text-align: center;
   border-radius: 10px;
   background-color: #ffffff;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
   border: 1px solid #c3c3c3;
 }
 
@@ -21,6 +21,7 @@
   line-height: 1.6;
   color: #555;
   margin-bottom: 20px;
+  text-align: left;
 }
 
 .payment-options {
@@ -42,6 +43,7 @@
   color: #555555;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
   border: 1px solid #c3c3c3;
+  cursor: pointer; /* This line makes the cursor change to a pointer on hover */
 }
 
 .payment-options li span {
@@ -64,8 +66,6 @@
 
 .payment-options button:hover {
   background-color: #00aac8;
-  /* 00c7eb 00aac8 */
-
   transform: translateY(-2px);
 }
 
@@ -90,6 +90,11 @@
   font-weight: bold;
 }
 
+.spectrum-guide-info {
+  margin-left: 160px;
+  margin-right: 160px;
+}
+
 /* Responsive styles */
 @media (max-width: 768px) {
   .payment-page {
@@ -111,5 +116,9 @@
   .payment-options button {
     margin-top: 10px;
     width: 100%;
+  }
+  .spectrum-guide-info {
+    margin-left: 30px;
+    margin-right: 30px;
   }
 }
