--- a/src/styles/Payment.css
+++ b/src/styles/Payment.css
@@ -95,9 +95,15 @@
   margin-right: 160px;
 }
 
+@media (max-width: 1200px) {
+  .payment-page {
+    margin: 20px 20px;
+  }
+}
 /* Responsive styles */
 @media (max-width: 768px) {
   .payment-page {
+    margin: 20px auto;
     padding: 15px;
     text-align: left;
     width: 90%;
