--- a/src/styles/CreateProfile.css
+++ b/src/styles/CreateProfile.css
@@ -4,7 +4,7 @@
   border-radius: 10px;
   /* box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); */
   padding: 20px;
-  margin: 40px auto;
+  margin: 60px auto;
   max-width: 800px;
   text-align: left;
   border: 1px solid #ccc;
@@ -108,8 +108,8 @@
 /* Mobile adjustments */
 @media (max-width: 768px) {
   .create-profile-page {
-    max-width: 500px;
-    margin: 20px 20px;
+    width: auto;
+    margin: 60px 20px;
     text-align: center;
   }
 
