--- a/src/styles/Payment.css
+++ b/src/styles/Payment.css
@@ -1,6 +1,6 @@
 .payment-page {
   max-width: 1200px;
-  margin: 20px auto;
+  margin: 60px auto;
   padding: 60px;
   text-align: center;
   border-radius: 10px;
@@ -103,11 +103,10 @@
 /* Responsive styles */
 @media (max-width: 768px) {
   .payment-page {
-    margin: 20px auto;
+    margin: 60px 20px;
     padding: 15px;
     text-align: left;
     width: 90%;
-    margin-top: -40px;
   }
 
   .payment-page h1 {
