--- a/src/styles/SignUp.css
+++ b/src/styles/SignUp.css
@@ -1,8 +1,7 @@
 /* src/styles/SignUp.css */
 
 .signup-page {
-  max-width: 1200px;
-  margin: 20px auto;
+  margin: 60px 120px;
   padding: 20px;
   background-color: #fff;
   border: 1px solid #c3c3c3;
@@ -129,8 +128,7 @@ input:focus {
 /* Responsive adjustments for mobile devices */
 @media (max-width: 768px) {
   .signup-page {
-    margin: 20px;
-    margin-top: -40px;
+    margin: 60px 20px;
     padding: 15px;
   }
 
