--- a/src/styles/InteractiveHub.css
+++ b/src/styles/InteractiveHub.css
@@ -126,19 +126,23 @@ button[type="submit"]:hover {
 
 @media (max-width: 1200px) {
   .interactive-hub {
-    margin: 60px 20px;
+    margin: 60px 10px;
+    padding: 20px;
+  }
+  .user-form {
+    margin: 0px;
   }
 
   .interactive-hub h1 {
     font-size: 2rem;
     letter-spacing: -0.3px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
 
   .interactive-hub p {
     font-size: 0.9rem;
     line-height: 1.6;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     letter-spacing: 0;
   }
 
@@ -172,56 +176,4 @@ button[type="submit"]:hover {
   .feature-description li {
     font-size: 0.9rem;
   }
-}
-
-/* Base Floating ChatBot Button */
-.floating-chat-bot {
-  position: fixed;
-  bottom: 20px; /* Distance from bottom */
-  right: 20px; /* Distance from right */
-  width: 50px; /* Button size */
-  height: 50px;
-  background-color: #00c7eb; /* Default background */
-  border: none;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-  transition: transform 0.5s ease-out, opacity 0.5s ease-out,
-    background 0.3s ease;
-  transform: translateX(100px); /* Start off-screen */
-  opacity: 0; /* Initially hidden */
-  border: 1px solid #555555;
-}
-
-/* Slide-in effect when visible */
-.floating-chat-bot.slide-in {
-  transform: translateX(0); /* Moves into position */
-  opacity: 1; /* Fade in */
-}
-
-/* Button hover effect */
-.floating-chat-bot:hover {
-  background-color: #00a5c4; /* Darker shade on hover */
-}
-
-/* Centered Icon inside Button */
-.floating-chat-bot .chat-icon {
-  font-size: 24px; /* Adjust icon size */
-  color: #555; /* Default icon color */
-  transition: color 0.3s ease, transform 0.2s ease;
-  position: relative;
-  top: -2px; /* Moves the icon up slightly to center */
-}
-
-/* Change icon color on hover */
-.floating-chat-bot:hover .chat-icon {
-  color: #fff; /* White icon on hover */
-}
-
-/* Hide the button by default */
-.hidden {
-  display: none;
 }
